# slicereg

./: .BAK.gitpod.Dockerfile  .gitignore  .gitpod.Dockerfile  .gitpod.yml  README.md  build.sh  dev_requirements.txt  environment.yml  main.py  pyproject.toml  pytest.ini  setup.py  workspace.code-workspace
.dvc/: config
.github/workflows/: linux.yaml  test_workflow.yaml
data/: .gitignore  RA_10X_scans.dvc  cortexlab_data.dvc  deepslice_output.dvc
docs/: gui_README.md  repos_README.md
docs/developers/: README.md  domain.md  gui.md  workflow.md
features/: annotated_atlas.feature  browse_atlas.feature  load_atlas.feature  load_slice.feature  multichannel.feature  resample.feature  section_affine_registration.feature
features/steps/: conftest.py  test_annotated_atlas.py  test_atlas_section_browse.py  test_image_coords.py  test_list_bgatlases.py  test_load_brainglobe_atlas.py  test_load_imio_atlas.py  test_load_slice_file.py  test_move_section.py  test_replace_atlas.py  test_resample_section.py  test_select_channel.py  test_update_section_transform.py  test_view_multiple_slices.py
notebooks/: BrainRegionTree.ipynb  Untitled.ipynb  atlas_coords.ipynb  downample_image.ipynb  fast_slice.ipynb  slice_atlas.ipynb
notebooks/.ipynb_checkpoints/: fast_slice-checkpoint.ipynb
slicereg/: config.py  main.py  test_main.py
slicereg/app/: app_model.py  commands.py  repo.py
slicereg/application/: io.py  provider.py  view_model.py
slicereg/commands/: README.md  base.py  builder.py  center_section.py  constants.py  get_coords.py  list_atlases.py  list_bgatlases.py  load_atlas.py  load_atlas_from_file.py  load_section.py  move_section.py  move_section2.py  provider.py  register_section.py  resample_section.py  select_channel.py  update_section.py  update_section_transform.py  utils.py
slicereg/core/: README.md  __init__.py  atlas.py  base.py  image.py  image_transform.py  physical_transform.py  registration.py  section.py  utils.py
slicereg/gui/: app_model.py  base.py  commands.py  constants.py  main.py  model.py  presenters.py  sidebar_view.py  slice_view.py  slider.py  view_model.py  view_section.py  volume_view.py  window.py
slicereg/io/: __init__.py  atlas_brainglobe.py  atlas_files.py  base.py  bg_atlasapi.py  image.py  imio.py  ome_tiff.py  tifffile.py  utils.py
slicereg/models/: atlas.py  atlas_design.py  base.py  image.py  image_transform.py  math.py  physical_transform.py  registration.py  section.py  transforms.py  utils.py
slicereg/repos/: __init__.py  atlas_repo.py  bgatlas_repo.py  brainglobe_atlas.py  inmemory.py  inmemory_section.py  section_repo.py
slicereg/utils/: __init__.py  dependency_injector.py  introspection.py  observable.py  platform.py  signal.py
src/: README.md
src/atlas/: repo.py  (+1 more)
tests/: test_load_brainglobe_atlas.py  test_load_slice_file.py
(+316 files in other folders)
