[tool.poetry]
name = "slicereg"
version = "0.1.0"
description = "A 2D-3D histological brain slice registration application for mouse brains."
authors = ["Nicholas A. Del Grosso <delgrosso.nick@gmail.com>"]
license = "GPL-3.0-only"

[tool.poetry.dependencies]
python = "^3.8,<3.9"
tifffile = "^2020.12.8"
xmltodict = "^0.12.0"
numpy = "^1.19.4"
bg-atlasapi = "^1.0.0"
PySide2 = "~5.14"  # Pyside 5.15 is not working properly with CI
PyOpenGL = "^3.1.5"
PyOpenGL-accelerate = "^3.1.5"
vispy = { git = "https://www.github.com/vispy/vispy.git", rev = "7f3f6f6" }

[tool.poetry.dev-dependencies]
dvc = {extras = ["gdrive"], version = "^1.11.9"}
pytest = "^6.2.1"
pytest-qt = "^3.3.0"
hypothesis = "^6.0.0"
pytest-bdd = "^4.0.2"
result = "^0.5.0"
coverage = "^5.3.1"
coveralls = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
bg-slicereg = "slicereg.main:launch_gui"